Remove subtitle class from header paragraph

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     </div>
                     <div>
                         <h1 class="title">Mini OSC for Cogs</h1>
-                        <p class="subtitle">Manage connections for network requests in Cogs</p>
+                        <p>Manage connections for network requests in Cogs</p>
                     </div>
                 </div>
                 <button class="theme-toggle" onclick="toggleTheme()" title="Toggle light/dark mode">
